# lore

./: .env.example  .gitignore  Lore_Hackathon_Build_Guide.docx  README.md  SECURITY_ANALYSIS.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  scrapper.md  tsconfig.json
docs/: PHASES.md
frontend/: architecture.json  package-lock.json
frontend/lore_Extension/v0.0.1/: architecture-explorer-0.0.1.vsix
frontend/lore_website/: README.md  index.html
frontend/lore_website/guidelines/: Guidelines.md
frontend/lore_website/src/app/: App.tsx  fonts.css  index.css  theme.css
integrations/browser-graph/: README.md
integrations/github-action/: README.md
integrations/vscode-extension/: README.md
ml_model/: direct_probability_prediction.py  xgboost_code_defect_predictor.pkl
p_scraper/lore-backend/: .gitignore  SCRAPER_BRIDGE.md  package.json  tsconfig.json
p_scraper/lore-backend/src/: index.ts
scripts/: demo.py
src/: index.ts
src/engines/: astEngine.ts  dependencyEngine.ts
src/lore/actions/: reviewer.py
src/lore/api/: schemas.py  server.py
src/lore/capsules/: synthesizer.py
src/lore/core/: config.py  models.py
src/lore/experts/: ranker.py
src/lore/features/: scoring.py
src/lore/graph/: builder.py
src/lore/ingestion/: cli.py  file_scraper.py  github_cli.py  github_scraper.py  report_writer.py  repository.py  stats.py
src/lore/storage/: base.py  factory.py  memory.py  mongo.py
src/types/: metrics.ts
tests/: test_github_scraper.py  test_report_writer.py  test_scoring.py
(+18 files in other folders)
