[project]
name = "lore"
version = "0.1.0"
description = "Phase-wise repository intelligence backend for the Lore hackathon build."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pymongo>=4.7.0",
  "PyDriller>=2.6",
  "requests>=2.32.0",
  "lizard>=1.17.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]
tree = [
  "tree-sitter>=0.22.0",
]

[project.scripts]
lore-ingest = "lore.ingestion.cli:main"
lore-scrape-github = "lore.ingestion.github_cli:main"
lore-api = "lore.api.server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
